# hyprtablet

./: .gitignore  PKGBUILD  README.md  dev.hyprtablet.Hyprtablet.desktop  pyproject.toml
src/hyprtablet/: app.py  hyprland.py
tests/: test_hyprland.py
